@@ -131,6 +131,7 @@
       optional override prefix supplied by the user.
     * PREFIX overrides all other *PREFIXes when set in the Makefile.PL.
       This restores "make install PREFIX=foo".
+    - Added quote_literal() to handle some shell quoting.
 
 6.05 Tue Aug 27 16:09:51 PDT 2002
     - Output format of the hint file verbose diagnostic is now in
